Detail recipe page, setup hyper link

--- a/recipes/chick-alfre.html
+++ b/recipes/chick-alfre.html
@@ -6,6 +6,12 @@
     </head>
 
     <body>
-        <h1>Pizza Recipe</h1>
+        <h1>Chicken Alfredo Recipe</h1>
+        <img src="../images/chicken.jpg" height="300" width ="300" alt="Grilled Chicken Alfredo Flatbread Pizza">
+
+        <h3> Description</h3>
+        <p>The Chicken Alfredo Flatbread pizza is one loved by many. Total cook time will be 51 minutes. 
+            Which includes prep time ~15 minutes, cook time ~26 minutess, additional time ~10 minutes
+        </p>
     </body>
 </html>
