Make Desc and Steps

--- a/recipes/chick-alfre.html
+++ b/recipes/chick-alfre.html
@@ -10,8 +10,28 @@
         <img src="../images/chicken.jpg" height="300" width ="300" alt="Grilled Chicken Alfredo Flatbread Pizza">
 
         <h3> Description</h3>
-        <p>The Chicken Alfredo Flatbread pizza is one loved by many. Total cook time will be 51 minutes. 
+        <p>The Chicken Alfredo Flatbread pizza is one loved by many. Total cook time will be 51 minutes.
+            <br> 
             Which includes prep time ~15 minutes, cook time ~26 minutess, additional time ~10 minutes
         </p>
+        <ul>
+            <li>1 (5 oz) skinless, boneless chicken breast</li>
+            <li>2 tablespoons Italian dressing </li>
+            <li>1 (1pound loaf frozen bread dough, thawed</li>
+            <li>1 (8 oz) packafe shredded mozzarella cheese, divided</li>
+            <li>1/2 cup sliced fresh mushrooms</li>
+            <li>3 slices bacon, cooked and crumbled (This is optional)</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>Marinate chicken breast in Italian dressing for 10 minutes.</li>
+            <li>Slice chicken thinly across the grain into pieces the width of thick bacon.</li>
+            <li>Cut bread dough into 2 equal pieces. Roll dough into 9-inch circles.</li>
+            <li>Spread Alfredo sauce evenly over dough. Cover with a little mozzarella cheese. 
+                Add chicken, mushrooms, and bacon. Sprinkle remaining mozzarella cheese on top.</li>
+            <li>Place 1 pizza in the Panasonic Countertop Induction Oven and press "Auto Cook." 
+                Select the frozen pizza setting, 9-inch size. Allow pizza to cook until timer goes off, about 13 minutes. 
+                Repeat with second pizza.</li>
+        </ol>
     </body>
 </html>
