Make webpages, Fix links

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <a href="recipes/chick-alfre.html">Chicken Alfredo</a>
+            <li><a href="recipes/chicken_alfredo.html">Chicken Alfredo</a></li>
+            <!--https://www.allrecipes.com/recipe/256637/grilled-chicken-alfredo-flatbread-pizzas/-->
+            
+            <li><a href="recipes/chicken_wings.html">Chicken Wings</a></li>
+            <!--https://www.budgetbytes.com/category/recipes/meat/chicken/chicken-wings/-->
         </ul>
         
     </body>
