--- a/recipes/chicken_alfredo.html
+++ b/recipes/chicken_alfredo.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Recipes</title>
+        <title>Chicken Alfredo Recipes</title>
     </head>
 
     <body>
