--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
             
             <li><a href="recipes/chicken_wings.html">Chicken Wings</a></li>
             <!--https://www.budgetbytes.com/category/recipes/meat/chicken/chicken-wings/-->
+
+            <li><a href="recipes/chicken_yakitori.html">Chicken Yakitori</a></li>
+            <!--https://www.foodnetwork.com/recipes/rachael-ray/chicken-yakitori-and-rice-7836455-->
         </ul>
         
     </body>
