--- a/recipes/chicken_wings.html
+++ b/recipes/chicken_wings.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Chicken Wings Recipes</title>
+        <img src="../images/chicken_wings.webp" height="300" width ="300" alt="Sticky Garlic Chicken Wings">
     </head>
 
     <body>
