--- a/recipes/chicken_yakitori.html
+++ b/recipes/chicken_yakitori.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Chicken Yakitori Recipes</title>
+        <img src="../images/chicken_yakitori.jpeg" height="300" width ="300" alt="Chicken Yakitori with rice and green beans">
     </head>
 
     <body>
