--- a/recipes/chicken_quesadilla.html
+++ b/recipes/chicken_quesadilla.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Chicken Wings Recipes</title>
+        <title>Chicken Quesadilla Recipes</title>
     </head>
 
     <body>
         <h1>Chicken Wing Recipe</h1>
-        <img src="../images/chicken_wings.webp" height="300" width ="300" alt="Sticky Garlic Chicken Wings">
+        <img src="../images/chicken_quesadilla.webp" height="300" width ="300" alt="Yummy Chicken Quesadilla">
 
         <h3>Description</h3>
 
