Play with recipe

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <li><a href="recipes/chicken_alfredo.html">Chicken Alfredo</a></li>
             <!--https://www.allrecipes.com/recipe/256637/grilled-chicken-alfredo-flatbread-pizzas/-->
             
-            <li><a href="recipes/chicken_wings.html">Chicken Wings</a></li>
+            <li><a href="recipes/chicken_quesadilla.html">Chicken Quesadilla</a></li>
             <!--https://www.budgetbytes.com/category/recipes/meat/chicken/chicken-wings/-->
 
             <li><a href="recipes/chicken_yakitori.html">Chicken Yakitori</a></li>
