Add desc and steps

--- a/recipes/chicken_quesadilla.html
+++ b/recipes/chicken_quesadilla.html
@@ -10,6 +10,23 @@
         <img src="../images/chicken_quesadilla.webp" height="300" width ="300" alt="Yummy Chicken Quesadilla">
 
         <h3>Description</h3>
+        <p>The chicken quesadilla is a recipe great for lovers of zesty chicken. Total cook time will be 20 minutes.
+            <br>
+            Including prep times of about ~20 minutes, cook time of ~25 minutes.
+        </p>
+        <ul>
+            <li>1 pound of skinless, boneless chicken breast, diced</li>
+            <li>1 (1.27 oz) packet fajita seasoning</li>
+            <li>1 tbsp vegetable oil</li>
+            <li>2 green bell peppers, chopped</li>
+            <li>2 red bell peppers, chopped</li>
+            <li>1 onion, chopped</li>
+            <li>10 (10 in) flour tortillas</li>
+            <li>1 (8 oz) package shredded Cheddar cheese</li>
+            <li>1 (8 oz) package shredded Monterey Jack cheese</li>
+            <li>1 tbsp bacon bits</li>
+
+        </ul>
 
         <h3>Steps</h3>
     </body>
