Add backwards button

--- a/recipes/chicken_alfredo.html
+++ b/recipes/chicken_alfredo.html
@@ -33,5 +33,6 @@
                 Select the frozen pizza setting, 9-inch size. Allow pizza to cook until timer goes off, about 13 minutes. 
                 Repeat with second pizza.</li>
         </ol>
+        <a href="../index.html">Back</a>
     </body>
 </html>
