--- a/recipes/chicken_quesadilla.html
+++ b/recipes/chicken_quesadilla.html
@@ -44,5 +44,6 @@
                 cheeses have melted, about 10 minutes. Cut 
                 each quesadilla into wedges and serve.</li>
         </ol>
+        <a href="../index.html">Back</a>
     </body>
 </html>
