--- a/recipes/chicken_yakitori.html
+++ b/recipes/chicken_yakitori.html
@@ -10,9 +10,38 @@
         <img src="../images/chicken_yakitori.jpeg" height="300" width ="300" alt="Chicken Yakitori with rice and green beans">
 
         <h3>Description</h3>
+        <p>Serve with white rice and sake for an easy but special meal! Total cook time will be 40 minutes.
+            <br>
+            Additional things to keep in mind*
+            <ul>
+                <li>Prep Time: 10 min</li>
+                <li>Cook Tme: 15 min</li>
+                <li>Additional Time: 15 min</li>
+                <li>Servings: 4</li>
+            </ul>
+        </p>
+        <h3>Ingredients: </h3>
+        <ul>
+            <li>10 wooden skewers</li>
+            <li>4 skinless, boneless chicken thighs, cut into 1-inch cubes</li>
+            <li>4 scallions, sliced into 1-inch pieces</li>
+            <li>1.5 cup of sake</li>
+            <li>1.5 cup of soy sauce</li>
+            <li>3 tbsp of mirin</li>
+            <li>2 tbsp of white sugar</li>
+            <li>1 tbsp of vegetail oil (or to taste)</li>
+        </ul>
 
         <h3>Steps</h3>
-
+        <ol>
+            <li>Soak 10 wooden skewers in cold water for 15 minutes.</li>
+            <li>Alternating with scallions, thread chicken pieces onto the soaked skewers.</li>
+            <li>Combine sake, soy sauce, mirin, and sugar in a small saucepan and bring to a boil. 
+                Reduce heat and simmer for 5 minutes. Reserve 1/2 of the sauce for dipping.</li>
+            <li>Heat a grill pan over high heat and lightly brush with vegetable oil. 
+                Add skewers and cook until chicken is no longer pink in the center, 
+                basting frequently with 1/2 of the sauce, 7 to 10 minutes per side.</li>
+        </ol>
 
         <a href="../index.html">Back</a>
     </body>
