--- a/recipes/chicken_alfredo.html
+++ b/recipes/chicken_alfredo.html
@@ -14,6 +14,7 @@
             <br> 
             Which includes prep time ~15 minutes, cook time ~26 minutess, additional time ~10 minutes
         </p>
+        <h3>Ingredients: </h3>
         <ul>
             <li>1 (5 oz) skinless, boneless chicken breast</li>
             <li>2 tablespoons Italian dressing </li>
