--- a/recipes/chicken_quesadilla.html
+++ b/recipes/chicken_quesadilla.html
@@ -14,6 +14,7 @@
             <br>
             Including prep times of about ~20 minutes, cook time of ~25 minutes.
         </p>
+        <h3>Ingredients: </h3>
         <ul>
             <li>1 pound of skinless, boneless chicken breast, diced</li>
             <li>1 (1.27 oz) packet fajita seasoning</li>
