--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="istyles.css">
+        <link rel="stylesheet" href="css/istyles.css">
         <title>Odin's Recipes</title>
     </head>
     <body>
