Add recipe styles

--- a/recipes/chicken_alfredo.html
+++ b/recipes/chicken_alfredo.html
@@ -2,29 +2,36 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="../css/recipes.css">
         <title>Chicken Alfredo Recipes</title>
     </head>
 
     <body>
-        <h1>Chicken Alfredo Recipe</h1>
-        <img src="../images/chicken.jpg" height="300" width ="300" alt="Grilled Chicken Alfredo Flatbread Pizza">
-
-        <h3> Description</h3>
-        <p>The Chicken Alfredo Flatbread pizza is one loved by many. Total cook time will be 51 minutes.
-            <br> 
-            Which includes prep time ~15 minutes, cook time ~26 minutess, additional time ~10 minutes
-        </p>
-        <h3>Ingredients: </h3>
-        <ul>
+        <h1 class="titlo">Chicken Alfredo Recipe</h1>
+        <div class="box">
+            <img src="../images/chicken.jpg" height=auto width=auto alt="Grilled Chicken Alfredo Flatbread Pizza" class="center">
+        </div>
+        <h3 class="headers"> Description</h3>
+        <div class="box">
+            <p>
+                The Chicken Alfredo Flatbread pizza is one loved by many.
+                <br>
+                Total cook time will be 51 minutes.
+                <br> 
+                Prep time ~15 minutes, cook time ~26 minutess, additional time ~10 minutes
+            </p>
+        </div>
+        <h3 class="headers">Ingredients</h3>
+        <ul class="box">
             <li>1 (5 oz) skinless, boneless chicken breast</li>
             <li>2 tablespoons Italian dressing </li>
-            <li>1 (1pound loaf frozen bread dough, thawed</li>
+            <li>1 (1 pound loaf frozen bread dough, thawed</li>
             <li>1 (8 oz) packafe shredded mozzarella cheese, divided</li>
             <li>1/2 cup sliced fresh mushrooms</li>
             <li>3 slices bacon, cooked and crumbled (This is optional)</li>
         </ul>
-        <h3>Steps</h3>
-        <ol>
+        <h3 class="headers">Steps</h3>
+        <ol class="box">
             <li>Marinate chicken breast in Italian dressing for 10 minutes.</li>
             <li>Slice chicken thinly across the grain into pieces the width of thick bacon.</li>
             <li>Cut bread dough into 2 equal pieces. Roll dough into 9-inch circles.</li>
@@ -34,6 +41,16 @@
                 Select the frozen pizza setting, 9-inch size. Allow pizza to cook until timer goes off, about 13 minutes. 
                 Repeat with second pizza.</li>
         </ol>
-        <a href="../index.html">Back</a>
+        <div class="box"><br></div>
+        <div class="headers">
+            <div class="links">
+                <p>
+                    <a href="../index.html">Back</a>
+                    |
+                    <a href="chicken_alfredo.html">Top</a>
+                </p>
+            </div>
+        </div>
+        
     </body>
 </html>
