--- a/recipes/chicken_quesadilla.html
+++ b/recipes/chicken_quesadilla.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Chicken Wing Recipe</h1>
-        <img src="../images/chicken_quesadilla.webp" height="300" width ="300" alt="Yummy Chicken Quesadilla">
+        <img src="../images/chicken_quesadilla.webp" height=auto width =auto alt="Yummy Chicken Quesadilla">
 
         <h3>Description</h3>
         <p>The chicken quesadilla is a recipe great for lovers of zesty chicken. Total cook time will be 20 minutes.
