Add Yakitori style

--- a/recipes/chicken_yakitori.html
+++ b/recipes/chicken_yakitori.html
@@ -2,26 +2,34 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="../css/recipes.css">
         <title>Chicken Yakitori Recipes</title>
     </head>
 
     <body>
-        <h1>Chicken Yakitori Recipe</h1>
-        <img src="../images/chicken_yakitori.jpeg" height="300" width ="300" alt="Chicken Yakitori with rice and green beans">
+        <h1 class="titlo">Chicken Yakitori Recipe</h1>
+        <div class="box">
+            <img src="../images/chicken_yakitori.jpeg" height="300" width ="300" alt="Chicken Yakitori with rice and green beans" class="center">
+        </div>
+        <h3 class="headers">Description</h3>
 
-        <h3>Description</h3>
-        <p>Serve with white rice and sake for an easy but special meal! Total cook time will be 40 minutes.
+        <div class="box">
+            <p>Serve with white rice and sake for an easy but special meal! 
+                <br>
+                Total cook time will be 40 minutes.
+                <br>
+                Additional things to keep in mind*
+                <ul>
+                    <li>Prep Time: 10 min</li>
+                    <li>Cook Tme: 15 min</li>
+                    <li>Additional Time: 15 min</li>
+                    <li>Servings: 4</li>
+                </ul>
+            </p>
             <br>
-            Additional things to keep in mind*
-            <ul>
-                <li>Prep Time: 10 min</li>
-                <li>Cook Tme: 15 min</li>
-                <li>Additional Time: 15 min</li>
-                <li>Servings: 4</li>
-            </ul>
-        </p>
-        <h3>Ingredients: </h3>
-        <ul>
+        </div>
+        <h3 class="headers">Ingredients</h3>
+        <ul class="box">
             <li>10 wooden skewers</li>
             <li>4 skinless, boneless chicken thighs, cut into 1-inch cubes</li>
             <li>4 scallions, sliced into 1-inch pieces</li>
@@ -32,8 +40,8 @@
             <li>1 tbsp of vegetail oil (or to taste)</li>
         </ul>
 
-        <h3>Steps</h3>
-        <ol>
+        <h3 class="headers">Steps</h3>
+        <ol class="box">
             <li>Soak 10 wooden skewers in cold water for 15 minutes.</li>
             <li>Alternating with scallions, thread chicken pieces onto the soaked skewers.</li>
             <li>Combine sake, soy sauce, mirin, and sugar in a small saucepan and bring to a boil. 
@@ -42,7 +50,14 @@
                 Add skewers and cook until chicken is no longer pink in the center, 
                 basting frequently with 1/2 of the sauce, 7 to 10 minutes per side.</li>
         </ol>
-
-        <a href="../index.html">Back</a>
+        <div class="headers">
+            <div class="links">
+                <p>
+                    <a href="../index.html">Back</a>
+                    |
+                    <a href="chicken_yakitori.html">Top</a>
+                </p>
+            </div>
+        </div>
     </body>
 </html>
